--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Learning project. React. TypeScript. Redux. Thunk.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server -open",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server",
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint"
   },
@@ -27,9 +27,9 @@
     "eslint": "7.23.0",
     "eslint-config-htmlacademy": "3.0.0",
     "eslint-plugin-react": "7.23.1",
-    "webpack": "5.28.0",
-    "webpack-cli": "4.6.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.1"
   },
   "dependencies": {
     "react": "17.0.2",
