--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "eslint": "npm run eslint.js && npm run eslint.ts",
-    "eslint.js": "eslint --ext .jsx --ext .js src/",
-    "eslint.ts": "eslint --config .eslintrc-ts.yml --ext .tsx src/",
+    "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint"
   },
   "repository": {
@@ -25,17 +23,10 @@
     "@babel/core": "7.13.14",
     "@babel/preset-env": "7.13.12",
     "@babel/preset-react": "7.13.13",
-    "@types/react": "17.0.3",
-    "@types/react-router-dom": "5.1.7",
-    "@types/react-test-renderer": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
     "babel-loader": "8.2.2",
     "eslint": "7.23.0",
     "eslint-config-htmlacademy": "3.0.0",
     "eslint-plugin-react": "7.23.1",
-    "ts-loader": "8.1.0",
-    "typescript": "4.2.3",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
